    - [ 1499 ] PostgreSQL datahandler should return Decimals instead of floats for NUMERIC/DECIMAL columns
    - [ 1477 ] os.setpgrp and posix.setpgrp fail with TypeError
    - [ 1396 ] Assigning os module funcs as class attributes incompatible with CPython
    - [ 1504 ] Inheriting twice from the same Java interface causes MRO problems
    - [ 1511 ] PySet doesn't support Java serialization
    - [ 1426 ] JSR 223 Bindings changes not taking effect and leaking between threads; unnecessary synchronization
    - [ 1548 ] Parentheses in CLASSPATH cause errors in jython.bat
    - [ 1576 ] files opened in 'a+' mode not readable
    - [ 1563 ] unicode() for Java objects working differently in 2.2 and 2.5
    - [ 1566 ] os.popen(cmd).read() returns `\r\n` as newline on Windows with Jython 2.5
    - [ 1517 ] TypeError: get_referrers
    - [ 1502 ] string-escape codec incorrect
    - [ 1534 ] new style object __dict__[name] ignored
    - [ 1479 ] xml parser file lock
    - [ 1582 ] com.ziclix.python.sql.PyConnection leaks memory
    - Fix runtime issues during exitfuncs triggered via SystemRestart (such as
      during Django or Pylons development mode reloading)
    - Fix pickling of collections.defaultdict objects
    - Fix the cmath module to accept objects implementing the __float__ method
    - Add google indexer (by Yin Wang and Steve Yegge)

Jython 2.5.1rc3
  Bugs Fixed
    - [ 1466 ] wrong handling of append only files

Jython 2.5.1rc2
  New Features
    - zxJDBC supports the with-statement: connections are committed or rollbacked; cursors are closed 
  Bugs Fixed
    - [ 1079 ] fixed regression on issue: twisted.python.threadable module: missing attribute '_RLock'
    - [ 1461 ] assert statement should lookup AssertionError using getglobal
    - [ 1425 ] distutils/util.py assumes too much posix
    - [ 1457 ] Cannot write an array in a file opened in r+b mode.
    - [ 1382 ] __cmp__ on certain types raises ArrayStoreException